Update KeepClearRectsTests expected coordinates
The keep-clear rects recorded in WindowState have coordinates relative
to the window origin. This CL updates the cts test to expect that
(previously it was converting the expected coordinates to screen space).

This CL also updates the splitscreen test to launch the two activities
directly into splitscreen

Fix: 221878130
Fix: 222223467
Fix: 223126815
Test: atest CtsWindowManagerDeviceTestCases:KeepClearRectsTests
Change-Id: Ibd52771c4ad630ca30f111f7a8d49e48dcd968d2

--- a/tests/framework/base/windowmanager/app/AndroidManifest.xml
+++ b/tests/framework/base/windowmanager/app/AndroidManifest.xml
@@ -630,6 +630,9 @@
         <activity android:name=".KeepClearRectsActivity"
             android:exported="true"
             android:theme="@style/NoInsetsTheme"/>
+        <activity android:name=".KeepClearRectsActivity2"
+            android:exported="true"
+            android:theme="@style/NoInsetsTheme"/>
 
         <!-- Splash Screen Test Activities -->
         <activity android:name=".HandleSplashScreenExitActivity"
