--- a/apps/CtsVerifier/AndroidManifest.xml
+++ b/apps/CtsVerifier/AndroidManifest.xml
@@ -2934,6 +2934,7 @@
                     android:value="android.hardware.type.watch" />
             <meta-data android:name="display_mode"
                        android:value="multi_display_mode" />
+            <meta-data android:name="CddTest" android:value="7.7.1/H-1-1" />
         </activity>
 
         <activity android:name=".usb.accessory.AccessoryAttachmentHandler"
@@ -2963,6 +2964,9 @@
                     android:value="android.hardware.type.watch" />
             <meta-data android:name="display_mode"
                        android:value="multi_display_mode" />
+            <meta-data android:name="CddTest" android:value="7.7.2/C-1-1" />
+            <meta-data android:name="ApiTest"
+                       android:value="android.hardware.usb.UsbDeviceConnection#controlTransfer|android.hardware.usb.UsbDeviceConnection#bulkTransfer" />
         </activity>
 
         <activity android:name=".usb.mtp.MtpHostTestActivity" android:label="@string/mtp_host_test"
@@ -2977,6 +2981,7 @@
                        android:value="android.hardware.type.automotive:android.hardware.type.television" />
             <meta-data android:name="display_mode"
                        android:value="multi_display_mode" />
+            <meta-data android:name="CddTest" android:value="7.7.2/C-3-1" />
         </activity>
 
 <!-- Turned off Sensor Power Test in initial L release
