--- a/tests/tests/car/AndroidManifest.xml
+++ b/tests/tests/car/AndroidManifest.xml
@@ -39,6 +39,8 @@
     <uses-permission android:name="android.car.permission.MANAGE_CAR_SYSTEM_UI" />
     <!-- For CarRemoteAccessManagerTest -->
     <uses-permission android:name="android.car.permission.USE_REMOTE_ACCESS" />
+    <!-- For CarInputTest -->
+    <uses-permission android:name="android.car.permission.CAR_CONTROL_AUDIO_VOLUME" />
 
     <application>
         <uses-library android:name="android.test.runner" />
