Test permission behavior on VirtualDevices
Verify the current state of permission grants with regards to
permissions. Verifies permissions granted on the default device also
apply to the VirtualDevice, same with permission denials.

Bug: 297318862
Bug: 297822560
Test: atest VirtualDevicePermissionTest
Change-Id: Ib5ce331d121270b3e5823a601ea6f906d7258b4e

--- a/tests/tests/virtualdevice/applaunch/AndroidManifest.xml
+++ b/tests/tests/virtualdevice/applaunch/AndroidManifest.xml
@@ -45,6 +45,13 @@
 
     <uses-feature android:name="android.software.companion_device_setup" />
 
+    <!--
+     * These permissions are used to verify permission behavior in VirtualDevicePermissionTest.
+     * The test module otherwise does not use these permissions.
+     -->
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <instrumentation android:name="androidx.test.runner.AndroidJUnitRunner"
                      android:targetPackage="android.virtualdevice.cts.applaunch"
                      android:label="CTS tests of android.companion.virtual applaunch functionality">
